@@ -25,6 +25,7 @@ def build(bld):
         'model/probe.cc',
         'model/boolean-probe.cc',
         'model/double-probe.cc',
+        'model/time-probe.cc',
         'model/uinteger-8-probe.cc',
         'model/uinteger-16-probe.cc',
         'model/uinteger-32-probe.cc',
@@ -58,6 +59,7 @@ def build(bld):
         'model/probe.h',
         'model/boolean-probe.h',
         'model/double-probe.h',
+        'model/time-probe.h',
         'model/uinteger-8-probe.h',
         'model/uinteger-16-probe.h',
         'model/uinteger-32-probe.h',
